# kazuka

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  rustfmt.toml
.github/actions/forge/: action.yml
.github/actions/forge_build/: action.yml
.github/actions/forge_test/: action.yml
.github/workflows/: ci.yml  coverage.yml  security.yml  test.yml
cli/kazuka-simple-arbitrage/: Cargo.toml
cli/kazuka-simple-arbitrage/src/: main.rs
crates/kazuka-core/: Cargo.toml
crates/kazuka-core/src/: engine.rs  error.rs  lib.rs  types.rs
crates/kazuka-core/src/event_sources/: block_event_source.rs  log_event_source.rs  mempool_event_source.rs  mev_share_event_source.rs  mod.rs
crates/kazuka-core/src/executors/: mempool_executor.rs
crates/kazuka-core/tests/: main.rs
crates/kazuka-mev-share/: Cargo.toml
crates/kazuka-mev-share-backend/: Cargo.toml
crates/kazuka-mev-share-rpc-api/: Cargo.toml  README.md
crates/kazuka-mev-share-rpc-api/src/: eth.rs  flashbots.rs  lib.rs  mev.rs  types.rs
crates/kazuka-mev-share-rpc-api/src/middleware/: auth.rs  auth1.rs  auth2.rs  auth3.rs  mod.rs  noop1.rs  noop2.rs
crates/kazuka-mev-share-rpc-api/src/types/: core.rs  eth.rs  flashbots.rs  mev.rs  mod.rs
crates/kazuka-mev-share-sse/: Cargo.toml
crates/kazuka-mev-share-sse/src/: client.rs  lib.rs  types.rs
crates/kazuka-mev-share-sse/tests/: client.rs
crates/kazuka-mev-share/src/: lib.rs
crates/strategies/kazuka-mev-share/: Cargo.toml  justfile
crates/strategies/kazuka-mev-share-arbitrage/: Cargo.toml  justfile
crates/strategies/kazuka-mev-share-arbitrage/bindings/: Cargo.toml
crates/strategies/kazuka-mev-share-arbitrage/bindings/src/: blind_arb.rs  erc20.rs  i_swap_router.rs  i_swap_router02.rs  i_uniswap_v2_pair.rs  i_uniswap_v3_pool.rs  i_uniswap_v3_swap_callback.rs  ierc20.rs  iweth.rs  lib.rs  owned.rs  safe_transfer_lib.rs  std_constants.rs  weth.rs
crates/strategies/kazuka-mev-share-arbitrage/contracts/src/: BlindArb.sol
crates/strategies/kazuka-mev-share-arbitrage/contracts/src/interfaces/: ISwapRouter.sol  IUniswapV3Pool.sol  IUniswapV3SwapCallback.sol
crates/strategies/kazuka-mev-share-arbitrage/contracts/src/interfaces/tokens/: IWETH.sol
crates/strategies/kazuka-mev-share-arbitrage/contracts/test/: BlindArb.t.sol
crates/strategies/kazuka-mev-share-arbitrage/data/: uniswap_v2_uniswap_v3_weth_pools.csv
crates/strategies/kazuka-mev-share-arbitrage/dune/: uniswap_v2_uniswap_v3_weth_pools.sql
crates/strategies/kazuka-mev-share-arbitrage/src/: contracts.rs  executor.rs  lib.rs  strategy.rs  types.rs
crates/strategies/kazuka-mev-share/contracts/: foundry.toml
crates/strategies/kazuka-mev-share/contracts/src/: BlindArb.sol
crates/strategies/kazuka-mev-share/contracts/src/interfaces/: ISwapRouter.sol  IUniswapV2Pair.sol  IUniswapV3Pool.sol  Uniswap.sol
crates/strategies/kazuka-mev-share/contracts/test/: BlindArb.t.sol
crates/strategies/kazuka-mev-share/dune/: uniswap_v2_sushiswap_weth_pools.sql
crates/strategies/kazuka-mev-share/src/: executor.rs  lib.rs  types.rs
