[workspace]
resolver = "2"
members = [
  "bin/kazuka",
  "crates/kazuka-core",
  "crates/strategies/kazuka-mev-share",
]

[workspace.dependencies]
## core
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

## error
thiserror = "2.0"
anyhow = "1.0"

## benchmarking
divan = "0.1"
criterion = { version = "0.7", features = ["html_reports"] }

## async
async-trait = "0.1"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

## alloy
alloy = { version = "1.0", features = ["full", "providers", "rpc"] }
alloy-node-bindings = { version = "1.0" }

## rpc
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }

## mev
mev-share = "0.1.4"
alloy-mev = "0.5"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
