[workspace]
resolver = "2"
members = [
  "bin/kazuka",
  "crates/kazuka-core",
  "crates/kazuka-mev-share",
  "crates/kazuka-mev-share-backend",
  "crates/kazuka-mev-share-rpc-api",
  "crates/kazuka-mev-share-sse",
  "crates/strategies/kazuka-mev-share-arbitrage",
]

[workspace.dependencies]
## core
bytes = "1.10"
pin-project-lite = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }

## error
thiserror = "2.0"
anyhow = "1.0"

## benchmarking
divan = "0.1"
criterion = { version = "0.7", features = ["html_reports"] }

## async
async-trait = "0.1"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
futures-util = "0.3"

# network
jsonrpsee = { version = "0.26", features = ["client", "async-client"] }
hyper = "1.7"
tower = "0.5"
tower-http = "0.6"
http = "1.3"
http-types = "2.12"
http-body = "1.0"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }

# serialization, fs
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

## alloy
alloy = { version = "1.0", features = ["full", "providers", "rpc"] }
alloy-node-bindings = { version = "1.0" }

## mev
mev-share = "0.1.4"
# alloy-mev = "0.5"

# testing
tower-test = "0.4"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
