[package]
name = "kazuka-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

reqwest.workspace = true
jsonrpsee.workspace = true

alloy.workspace = true
alloy-node-bindings.workspace = true

kazuka-mev-share.workspace = true
