[package]
name = "kazuka-mev-share-sse"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["default"] }

# network
async-sse = { git = "https://github.com/vyorkin/async-sse.git", branch = "feature/upgrade-dependencies" }
http-types.workspace = true
http = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = [
  "stream",
  "json",
] }

## async
tokio = { workspace = true, features = ["time"] }
tower = { workspace = true, optional = true }
hyper = { workspace = true, features = ["stream"], optional = true }
tokio-util = { workspace = true, features = ["compat"], optional = true }
tokio-stream = { workspace = true, features = ["sync"], optional = true }

# serde
serde.workspace = true
serde_json.workspace = true

# misc
bytes.workspace = true
pin-project-lite = "0.2"
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
server = ["hyper", "http", "tokio-stream", "tokio-util", "tower"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
