[package]
name = "kazuka-mev-share-arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
alloy.workspace = true
# alloy-mev.workspace = true
serde.workspace = true
jsonrpsee.workspace = true
tower.workspace = true
csv.workspace = true

kazuka-core.workspace = true
kazuka-mev-share.workspace = true
# kazuka-mev-share-bindings = { path = "./bindings" }
